# cpp-design-patterns

./: .gitignore  CMakeLists.txt  README.md  makefile
Common/: CMakeLists.txt
Common/Bitmap/: CMakeLists.txt
Common/Bitmap/Include/: Bitmap.hpp
Common/Bitmap/Source/: Bitmap.cpp
Include/: Factory.h  Singleton.h
Patterns/: CMakeLists.txt
Patterns/Adapter/: CMakeLists.txt
Patterns/Adapter/Include/: DrawShapes.hpp
Patterns/Adapter/Source/: Main.cpp
Patterns/Bridge/: CMakeLists.txt
Patterns/Bridge/Include/: PimplIdiom.hpp
Patterns/Bridge/Source/: Main.cpp  PimplIdiom.cpp
Patterns/Builder/: CMakeLists.txt
Patterns/Builder/Include/: FluentHtmlElement.hpp  GroovyBuilder.hpp  HtmlElement.hpp
Patterns/Builder/Source/: Main.cpp
Patterns/Composite/: CMakeLists.txt
Patterns/Composite/Include/: GeometricShapes.hpp
Patterns/Composite/Source/: Main.cpp
Patterns/Factory/: CMakeLists.txt
Patterns/Factory/Include/: ConcreteFactory.hpp  FactoryMethod.hpp  HotDrink.hpp  HotDrinkFactory.hpp  InnerFactory.hpp
Patterns/Factory/Source/: Main.cpp
Patterns/Prototype/: CMakeLists.txt
Patterns/Prototype/Include/: Prototype.hpp  PrototypeFactory.hpp
Patterns/Prototype/Source/: Main.cpp
Patterns/Singleton/: CMakeLists.txt
Patterns/Singleton/Include/: Multiton.hpp  Singleton.hpp
Patterns/Singleton/Source/: Main.cpp
Patterns/state/: CMakeLists.txt
Patterns/state/include/: phone.hpp
Patterns/state/source/: main.cpp  phone.cpp
Source/: Main.cpp
