option(BUILDER_PATTERN "Build builder pattern" ON)
option(SINGLETON_PATTERN "Build singleton pattern" ON)
option(ADAPTER_PATTERN "Build adapter pattern" ON)
option(FACTORY_PATTERN "Build factory pattern" ON)
option(PROTOTYPE_PATTERN "Build prototype pattern" ON)

if (BUILDER_PATTERN)
    add_subdirectory(Builder)
endif()
if (SINGLETON_PATTERN)
    add_subdirectory(Singleton)
endif()
if (SINGLETON_PATTERN)
    add_subdirectory(Adapter)
endif()
if (FACTORY_PATTERN)
    add_subdirectory(Factory)
endif()
if (PROTOTYPE_PATTERN)
    add_subdirectory(Prototype)
endif()
