option(BUILD_ADAPTER   "Build adapter pattern"   ON)
option(BUILD_BRIDGE    "Build bridge pattern"    ON)
option(BUILD_BUILDER   "Build builder pattern"   ON)
option(BUILD_COMPOSITE "Build composite pattern" ON)
option(BUILD_FACTORY   "Build factory pattern"   ON)
option(BUILD_PROTOTYPE "Build prototype pattern" ON)
option(BUILD_SINGLETON "Build singleton pattern" ON)

if (BUILD_ADAPTER)
    add_subdirectory(Adapter)
endif()
if (BUILD_BRIDGE)
    add_subdirectory(Bridge)
endif()
if (BUILD_BUILDER)
    add_subdirectory(Builder)
endif()
if (BUILD_COMPOSITE)
    add_subdirectory(Composite)
endif()
if (BUILD_FACTORY)
    add_subdirectory(Factory)
endif()
if (BUILD_PROTOTYPE)
    add_subdirectory(Prototype)
endif()
if (BUILD_SINGLETON)
    add_subdirectory(Singleton)
endif()
